(bug) Fix shift to the left issue

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -250,8 +250,8 @@ div.eventList {
 .create-form {
   overflow-y: auto;
   overflow-x: hidden;
-  height: 62vh;
-  width: 100vw;
+  height: 56vh;
+  width: 94vw;
 }
 
 .create-form::-webkit-scrollbar { 
@@ -286,7 +286,6 @@ div.eventList {
 
 .create-form .col-xs-4 {
   width: 33.3333%;
-  /*margin: 0 0 0.5em 0;*/
   margin: 1em 0;
 }
 
@@ -309,7 +308,7 @@ div.eventList {
   border-radius: 5px;
   font-size: 0.8em;
   height: 30px;
-  margin-bottom: 0;
+  margin: 5px 0;
 }
 
 .create-form .checkbox {
@@ -340,6 +339,7 @@ div.eventList {
   color: #F6F0ED;
 }
 
+.create-form button.btn-link:hover,
 .clear:hover {
   color: #F6F0ED;
   text-decoration: underline;
@@ -353,6 +353,10 @@ div.eventList {
   left: 0;
 }
 
+.event-create .container .row {
+  margin-right: 0;
+  margin-left: 0;
+}
 /*
  * -- EVENTDETAILS STYLES --
  */
@@ -714,6 +718,11 @@ input {
 
 @media (min-width:768px) {
 
+  .create-form {
+    height: 62vh;
+    overflow-y: hidden;
+  }
+
   .create-form .col-sm-2 {
     width: 16.66666667%;;
   }
@@ -726,7 +735,7 @@ input {
     margin: 1.2em 0;
   }
 
-  .create-form .more-option {
+  .create-form .more-option, .create-form .errors {
     margin-bottom: 1.2em;
   }
 
@@ -739,8 +748,13 @@ input {
     margin-right: 1em;
     margin-bottom: 5px;
   }
+
   .create-form .footer {
     position: static;
+  }
+
+  .clear {
+    margin-right: 3em;
   }
 }
 
